--- a/templates/base.html
+++ b/templates/base.html
@@ -21,11 +21,15 @@
                     <span class="icon-bar"></span>
                 </button>
             </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#">Home</a></li>
-                </ul>
-            </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+              {% if user.is_authenticated %}
+              <li><a href="{% url 'auth_logout' %}">Logout</a></li>
+              {% else %}
+              <li><a href="{% url 'auth_login' %}">Login</a></li>
+              {% endif %}
+            </ul>
+          </div>
         </div>
     </nav>
     <div class="container">
