--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
+{% if user.is_authenticated %}
 <div class="jumbotron">
-  <h1>Stay tuned...</h1>
-  <p>My Site is coming soon</p>
+  <h1>Welcome Back!</h1>
 </div>
+{% else %}
+<div class="jumbotron">
+  <h1>Welcome back to SGLC!</h1>
+  <p>The offical website of the Sleeping Giants Lacrosse Club!</p>
+  <p><a class="btn btn-lg btn-primary" href="{% url 'registration_register' %}">Sign up</a></p>
+</div>
+{% endif %}
 {% endblock %}
