--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 <div class="jumbotron">
   <h1>Welcome back to SGLC!</h1>
   <p>The offical website of the Sleeping Giants Lacrosse Club!</p>
-  <p><a class="btn btn-lg btn-primary" href="{% url 'registration_register' %}">Sign in</a></p>
+  <p><a class="btn btn-lg btn-primary" href="{% url 'registration_register' %}">Create Account</a></p>
 </div>
 {% endif %}
 {% endblock %}
