--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -5,5 +5,7 @@
 <p>Asked by {{ question.user.username }} on {{ question.created_at }}</p>
 {% if question.user == user %}
 <p><a href="{% url 'question_update' pk=question.id %}">Edit question</a></p>
+<p><a href="{% url 'question_update' pk=question.id %}">Delete question</a></p>
 {% endif %}
+<p><a href="{% url 'answer_create' pk=question.id %}">Write Answer</a></p>
 {% endblock %}
