--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
-            <a href="/" class="navbar-brand">Sleeping Giants Lacrosse Club</a>
+            <a href="/" class="navbar-brand">SGLC</a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -25,9 +25,10 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
               {% if user.is_authenticated %}
-              <li><a href="{% url 'question_list' %}">Questions</a></li>
+              <li><a href="{% url 'roster' %}">Roster</a></li>
+              <li><a href="{% url 'question_list' %}">Blog</a></li>
+              <li><a href="{% url 'question_create' %}">Post a topic</a></li>
               <li><a href="{% url 'auth_logout' %}">Logout</a></li>
-              <li><a href="{% url 'question_create' %}">Add question</a></li>
               {% else %}
               <li><a href="{% url 'auth_login' %}">Login</a></li>
               {% endif %}
@@ -39,7 +40,7 @@
         {% block content %}
         {% endblock %}
       </div>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </body>
 </html>
