--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -7,5 +7,17 @@
 <p><a href="{% url 'question_update' pk=question.id %}">Edit question</a></p>
 <p><a href="{% url 'question_update' pk=question.id %}">Delete question</a></p>
 {% endif %}
+{% if answers.count > 0 %}
+{% if answer.user == user %}
+  <p><a href="{% url 'answer_update' question_pk=question.id answer_pk=answer.id %}">Edit answer</a></p>
+{% endif %}
+<h3>{{ answers.count }} Answer{{ answers.count|pluralize }}:</h3>
+{% endif %}
+{% for answer in answers %}
+<div class="panel">
+  <p>{{ answer.text }}</p>
+  <p>Answered by {{ answer.user.username. }} on {{ answer.created_at }}</p>
+</div>
+{% endfor %}
 <p><a href="{% url 'answer_create' pk=question.id %}">Write Answer</a></p>
 {% endblock %}
