--- a/templates/team_roster.html
+++ b/templates/team_roster.html
@@ -2,46 +2,48 @@
 {% block content %}
 {% if user.is_authenticated %}
 <div class="jumbotron">
-  <h1>2016 Sleeping Giants Roster</h1>
+  <h1> Roster</h1>
+  <p> 2016 Sleeping Giants                            </p>
   <p>                             </p>
-  <p>                             </p>
-<p>FullName</p>	          <p>Number</p>
+<p>Name and Number</p>
   <p>                            </p>
-<p>Alex Collins</p>	         <p>4</p>
-<p>Ben Hagen</p>	           <p>5</p>
-<p>Billy Doherty</p>	      <p>20</p>
-<p>Chris Delvecchio</p>	    <p>24</p>
-<p>Chris Noll</p>	           <p>8</p>
-<p>Craig Mattson</p>	       <p>2</p>
-<p>David Quinn</p>	        <p>57</p>
-<p>Dylan Debonis</p>	      <p>92</p>
-<p>Dylan Ix</p>	            <p>97</p>
-<p>Eric Fernandes</p>	      <p>22</p>
-<p>Forest Chicoine</p>	    <p>95</p>
-<p>Frank Mongiello</p>	    <p>31</p>
-<p>Ivan Matson</p>	        <p>41</p>
-<p>Jake Sal</p>	            <p>27</p>
-<p>James Mackonochie</p>	  <p>14</p>
-<p>Jared Kevelson</p>	      <p>17</p>
-<p>Jaxon Powers</p>	        <p>10</p>
-<p>Joe Christman</p> 	      <p>11</p>
-<p>Joe Portella</p> 	      <p>96</p>
-<p>John Spade</p>	           <p>3</p>
-<p>John Whelan</p>	        <p>44</p>
-<p>Justin Canzano</p>	       <p>6</p>
-<p>Liam Richards</p>	      <p>79</p>
-<p>Matt Collins</p>	        <p>36</p>
-<p>Matt Zeterberg</p>	      <p>71</p>
-<p>Matt Zurek</p>	          <p>26</p>
-<p>Michael Mackonochie</p>	 <p>7</p>
-<p>Mike Friedman</p> 	      <p>68</p>
-<p>Mike Zimnoch</p> 	      <p>55</p>
-<p>Pete Zygadlo</p>	        <p>33</p>
-<p>Ray Nyhuis</p>	          <p>21</p>
-<p>Sean Feeney</p>	        <p>32</p>
-<p>Tommy Keller</p>	        <p>23</p>
-<p>Tommy Pearce</p> 	      <p>56</p>
-<p>Tyler Nelson</p>	        <p>12</p>
+</div>
+<div class = "container">
+<p>Alex Collins_____________4</p>
+<p>Ben Hagen_____________5</p>
+<p>Billy Doherty___________20</p>
+<p>Chris Delvecchio_________24</p>
+<p>Chris Noll______________8</p>
+<p>Craig Mattson___________2</p>
+<p>David Quinn____________57</p>
+<p>Dylan Debonis__________92</p>
+<p>Dylan Ix_______________97</p>
+<p>Eric Fernandes__________22</p>
+<p>Forest Chicoine_________95</p>
+<p>Frank Mongiello________31</p>
+<p>Ivan Matson____________41</p>
+<p>Jake Sal_______________27</p>
+<p>James Mackonochie______14</p>
+<p>Jared Kevelson_________17</p>
+<p>Jaxon Powers___________10</p>
+<p>Joe Christman__________11</p>
+<p>Joe Portella___________96</p>
+<p>John Spade______________3</p>
+<p>John Whelan____________44</p>
+<p>Justin Canzano__________6</p>
+<p>Liam Richards__________79</p>
+<p>Matt Collins___________36</p>
+<p>Matt Zeterberg_________71</p>
+<p>Matt Zurek_____________26</p>
+<p>Michael Mackonochie_____7</p>
+<p>Mike Friedman__________68</p>
+<p>Mike Zimnoch___________55</p>
+<p>Pete Zygadlo___________33</p>
+<p>Ray Nyhuis_____________21</p>
+<p>Sean Feeney____________32</p>
+<p>Tommy Keller___________23</p>
+<p>Tommy Pearce___________56</p>
+<p>Tyler Nelson___________12</p>
 </div>
 {% else %}
 <div class="jumbotron">
