add star rating

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,9 +7,9 @@
   <p>Sleeping Giants Lacrosse Club | NCLL Division II New England Conference Team of the Year | 2015 New England Confernece Champions | 2015 National Championship Final 4 | Hamden, CT </p>
 </div>
 <div class="page-header">
-  <h1>2016 Sleeping Giants Preview</h1>
+  <h1>2016 Sleeping Giants Lax Preview</h1>
   <p></p>
-  <p><iframe width="1120" height="600" src="https://www.youtube.com/embed/j_F5PCJEVJk" frameborder="0" allowfullscreen></iframe></p>
+  <p><iframe width="1140" height="600" src="https://www.youtube.com/embed/j_F5PCJEVJk" frameborder="0" allowfullscreen></iframe></p>
   <p><img src ="{% static "clublax.jpg" %}" alt="My image"> <!-- Images --> </p>
 </div>
 {% else %}
