--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -1,24 +1,77 @@
+
 {% extends 'base.html' %}
 {% block content %}
 <h1>{{ question.title }}</h1>
+{% if rating.rating__avg < 0.5 %}
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  ({{ rating.rating__avg }})
+{% elif rating.rating__avg < 1.5 %}
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  ({{ rating.rating__avg }})
+{% elif rating.rating__avg < 2.5 %}
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  ({{ rating.rating__avg }})
+{% elif rating.rating__avg < 3.5 %}
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  ({{ rating.rating__avg }})
+{% elif rating.rating__avg < 4.5 %}
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  ({{ rating.rating__avg }})
+{% else %}
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-star"></span>
+  ({{ rating.rating__avg }})
+{% endif %}
 <p>{{ question.description }}</p>
-<p>Asked by {{ question.user.username }} on {{ question.created_at }}</p>
+<p>Asked  by <a href="{% url 'user_detail' slug=question.user.username %}">{{ question.user.username }}</a> {% endif %} on {{ question.created_at }}</p>
 {% if question.user == user %}
 <p><a href="{% url 'question_update' pk=question.id %}">Edit question</a></p>
-<p><a href="{% url 'question_update' pk=question.id %}">Delete question</a></p>
+<p><a href="{% url 'question_delete' pk=question.id %}">Delete question</a></p>
 {% endif %}
 {% if answers.count > 0 %}
-{% if answer.user == user %}
-  <p><a href="{% url 'answer_update' question_pk=question.id answer_pk=answer.id %}">Edit answer</a></p>
-  <p><a href="{% url 'answer_delete' question_pk=question.id answer_pk=answer.id %}">delete answer</a></p>
-{% endif %}
 <h3>{{ answers.count }} Answer{{ answers.count|pluralize }}:</h3>
 {% endif %}
 {% for answer in answers %}
 <div class="panel">
   <p>{{ answer.text }}</p>
-  <p>Answered by {{ answer.user.username. }} on {{ answer.created_at }}</p>
+  {% if answer.user == user %}
+  <p><a href="{% url 'answer_update' question_pk=question.id answer_pk=answer.id %}">Edit answer</a></p>
+  <p><a href="{% url 'answer_delete' question_pk=question.id answer_pk=answer.id %}">Delete answer</a></p>
+  {% endif %}
+ <p>Answered  by <a href="{% url 'user_detail' slug=answer.user.username %}">{{ answer.user.username }}</a> {% endif %} on {{ answer.created_at }} ({{ answer.vote_set.all.count }}
+    {% csrf_token %}
+    <input type="hidden" name="answer" value="{{ answer.id }}" />
+    <;input type="hidden" name="question" value="{{ question.id }}" />
+    <input type="hidden" name="user" value="{{ user.id }}" />
+    <button>+</button>
+  </form>
 </div>
 {% endfor %}
-<p><a href="{% url 'answer_create' pk=question.id %}">Write Answer</a></p>
+{% if not user_answers %}
+<p><a href="{% url 'answer_create' pk=question.id %}">Write answer</a></p>
+{% endif %}
+<p><a href="{% url 'answer_create' pk=question.id %}">Write answer</a></p>
 {% endblock %}
