--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -44,8 +44,10 @@
   <span class="glyphicon glyphicon-star"></span>
   ({{ rating.rating__avg }})
 {% endif %}
+
 <p>{{ question.description }}</p>
-<p>Asked  by <a href="{% url 'user_detail' slug=question.user.username %}">{{ question.user.username }}</a> {% endif %} on {{ question.created_at }}</p>
+<p>{% if question.image_file %}<img src="{{ question.image_file.url }}" />{% endif %}</p>
+<p>Asked {% if question.visibility == 0 %} by <a href="{% url 'user_detail' slug=question.user.username %}">{{ question.user.username }}</a> {% endif %} on {{ question.created_at }}</p>
 {% if question.user == user %}
 <p><a href="{% url 'question_update' pk=question.id %}">Edit question</a></p>
 <p><a href="{% url 'question_delete' pk=question.id %}">Delete question</a></p>
@@ -55,22 +57,31 @@
 {% endif %}
 {% for answer in answers %}
 <div class="panel">
-  <p>{{ answer.text }}</p>
-  {% if answer.user == user %}
-  <p><a href="{% url 'answer_update' question_pk=question.id answer_pk=answer.id %}">Edit answer</a></p>
-  <p><a href="{% url 'answer_delete' question_pk=question.id answer_pk=answer.id %}">Delete answer</a></p>
-  {% endif %}
- <p>Answered  by <a href="{% url 'user_detail' slug=answer.user.username %}">{{ answer.user.username }}</a> {% endif %} on {{ answer.created_at }} ({{ answer.vote_set.all.count }}
-    {% csrf_token %}
-    <input type="hidden" name="answer" value="{{ answer.id }}" />
-    <;input type="hidden" name="question" value="{{ question.id }}" />
-    <input type="hidden" name="user" value="{{ user.id }}" />
-    <button>+</button>
-  </form>
+    <p>{{ answer.text }}</p>
+    {% if answer.user == user %}
+    <p><a href="{% url 'answer_update' question_pk=question.id answer_pk=answer.id %}">Edit answer</a><p>
+    <p><a href="{% url 'answer_delete' question_pk=question.id answer_pk=answer.id %}">Delete answer</a><p>
+    {% endif %}
+    <p>Answered {% if answer.visibility == 0 %} by <a href="{% url 'user_detail' slug=answer.user.username %}">{{ answer.user.username }}</a> {% endif %} on {{ answer.created_at }}</p>
+    <form method="post" action="{% url 'vote' %}">
+        <span class="badge">{{ answer.vote_set.all.count }} Vote{{ 	answer.vote_set.all.count|pluralize }}</span>
+        {% csrf_token %}
+        <input type="hidden" name="answer" value="{{ answer.id }}" />
+        <input type="hidden" name="question" value="{{ question.id }}" />
+        <input type="hidden" name="user" value="{{ user.id }}" />
+        {% if answer in user_votes %}  
+            <button class="btn btn-link">
+              <span class="glyphicon glyphicon-thumbs-down"></span>
+            </button>
+        {% else %}
+            <button class="btn btn-link">
+              <span class="glyphicon glyphicon-thumbs-up"></span>
+            </button>
+        {% endif %}
+    </form>
 </div>
 {% endfor %}
 {% if not user_answers %}
 <p><a href="{% url 'answer_create' pk=question.id %}">Write answer</a></p>
 {% endif %}
-<p><a href="{% url 'answer_create' pk=question.id %}">Write answer</a></p>
 {% endblock %}
