--- a/templates/base.html
+++ b/templates/base.html
@@ -5,44 +5,46 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SGLC - Sleeping Giants Lacrosse Club</title>
+    <title>Sleeping Giants</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static "css/base.css" %}" rel="stylesheet">
   </head>
   <body>
-    <body>
-      <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <a href="/" class="navbar-brand">SGLC</a>
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-              {% if user.is_authenticated %}
-              <li><a href="{% url 'news' %}">News</a></li>
-              <li><a href="{% url 'about' %}">About Us</a></li>
-              <li><a href="{% url 'roster' %}">Roster</a></li>
-              <li><a href="{% url 'question_list' %}">Blog</a></li>
-              <li><a href="{% url 'question_create' %}">Post a topic</a></li>
-              <li><a href="{% url 'user_detail' slug=user.username %}">Profile</a></li>
-              <li><a href="{% url 'auth_logout' %}">Logout</a></li>
-              {% else %}
-              <li><a href="{% url 'auth_login' %}">Login</a></li>
-              {% endif %}
-            </ul>
-          </div>
-        </div>
-      </nav>
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-        {% block content %}
-        {% endblock %}
+        <div class="navbar-header">
+          <a href="/" class="navbar-brand">SGLC</a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+                <form action="{% url 'search' %}" class="navbar-form navbar-left" method="get">
+                  <input type="text" placeholder="Search" class="form-control" name="query">
+                </form>
+                <li><a href="{% url 'news' %}">News</a></li>
+                <li><a href="{% url 'about' %}">About Us</a></li>
+                <li><a href="{% url 'roster' %}">Roster</a></li>
+                <li><a href="{% url 'question_list' %}">Blog</a></li>
+                <li><a href="{% url 'question_create' %}">Post a topic</a></li>
+                <li><a href="{% url 'user_detail' slug=user.username %}">Profile</a></li>
+                <li><a href="{% url 'auth_logout' %}">Logout</a></li>
+                {% else %}
+                <li><a href="{% url 'auth_login' %}">Login</a></li>
+                {% endif %}
+          </ul>
+        </div>
       </div>
+    </nav>
+    <div class="container">
+      {% block content %}
+      {% endblock %}
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
