--- a/templates/question/question_list.html
+++ b/templates/question/question_list.html
@@ -2,8 +2,37 @@
 {% block content %}
 {% for question in object_list %}
 <div class="panel">
-  <h3>{{ question.title }}</h3>
-  <p>Asked by {{ question.user.username }} on {{ question.created_at }}</p>
+    <h3><a href="{{ question.get_absolute_url }}">{{ question.title }}</a></h3>
+    <p>Asked {% if question.visibility == 0 %} by <a href="{% url 'user_detail' slug=question.user.username %}">{{ question.user.username }}</a> {% endif %} on {{ question.created_at }}</p>
+    <form method="post" action="{% url 'vote' %}">
+    <span class="badge">{{ question.answer_set.all.count }} Answer{{ question.answer_set.all.count|pluralize }}</span>
+    <span class="badge">{{ question.vote_set.all.count }} Vote{{ question.vote_set.all.count|pluralize }}</span> 
+    {% csrf_token %}
+    <input type="hidden" name="question" value="{{ question.id }}" />
+    <input type="hidden" name="user" value="{{ user.id }}" />
+        {% if question in user_votes %}  
+        <button class="btn btn-link">
+          <span class="glyphicon glyphicon-thumbs-down"></span>
+        </button>
+        {% else %}
+        <button class="btn btn-link">
+          <span class="glyphicon glyphicon-thumbs-up"></span>
+        </button>
+        {% endif %}
+    </form>
 </div>
+{% empty %}
+<p>No results found.</p>
 {% endfor %}
+{% if is_paginated %}
+<nav>
+    <ul class="pager">
+        {% if page_obj.has_previous %}
+        <li><a href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+        {% endif %}
+        {% if page_obj.has_next %}
+        <li><a href="?page={{ page_obj.next_page_number }}">Next</a></li>
+        {% endif %}
+    </ul>
+{% endif %}
 {% endblock %}
