--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load bootstrap3 %}
 {% block content %}
 <div class="row">
-    <div class="col-lg-6">
-        <form method="post" action="" enctype="multipart/form-data">
+    <div class="col-md-4">
+        <h1>Change password</h1>
+        <form action="" method="post">
             {% csrf_token %}
             {% bootstrap_form form %}
             <button type="submit" class="btn btn-primary">Submit</button>
