--- a/templates/user/user_confirm_delete.html
+++ b/templates/user/user_confirm_delete.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<p class="lead">Are you sure you want to delete "{{ answer.text }}"?</p>
+<p class="lead">Are you sure you want to delete "{{ user.username }}"?</p>
 <form method="post" action="">
     {% csrf_token %}
     <button type="submit" class="btn btn-primary">Delete</button>
