--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 {% if user.is_authenticated %}
 <div class="jumbotron">
   <h1>Sleeping Giants Lacrosse Club</h1>
-  <p>Sleeping Giants Lacrosse Club | NCLL Division II New England Conference Team of the Year | 2015 New England Confernece Champions | 2015 National Championship Final 4 | Hamden, CT </p>
+  <p>Sleeping Giants Lacrosse Club | NCLL Division II New England Conference Team of the Year | 2015 New England Conference Champions | 2015 National Championship Final 4 | Hamden, CT </p>
 </div>
 <div class="page-header">
   <h1>2016 Sleeping Giants Lax Preview</h1>
