--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -64,12 +64,12 @@
     {% endif %}
     <p>Answered {% if answer.visibility == 0 %} by <a href="{% url 'user_detail' slug=answer.user.username %}">{{ answer.user.username }}</a> {% endif %} on {{ answer.created_at }}</p>
     <form method="post" action="{% url 'vote' %}">
-        <span class="badge">{{ answer.vote_set.all.count }} Vote{{ 	answer.vote_set.all.count|pluralize }}</span>
+        <span class="badge">{{ blog.vote_set.all.count }} Vote{{ 	blog.vote_set.all.count|pluralize }}</span>
         {% csrf_token %}
         <input type="hidden" name="answer" value="{{ answer.id }}" />
         <input type="hidden" name="question" value="{{ question.id }}" />
         <input type="hidden" name="user" value="{{ user.id }}" />
-        {% if answer in user_votes %}  
+        {% if answer in user_votes %}
             <button class="btn btn-link">
               <span class="glyphicon glyphicon-thumbs-down"></span>
             </button>
