--- a/templates/question/question_list.html
+++ b/templates/question/question_list.html
@@ -3,14 +3,14 @@
 {% for question in object_list %}
 <div class="panel">
     <h3><a href="{{ question.get_absolute_url }}">{{ question.title }}</a></h3>
-    <p>Asked {% if question.visibility == 0 %} by <a href="{% url 'user_detail' slug=question.user.username %}">{{ question.user.username }}</a> {% endif %} on {{ question.created_at }}</p>
+    <p>Asked by <a href="{% url 'user_detail' slug=question.user.username %}">{{ question.user.username }}</a> on {{ question.created_at }}</p>
     <form method="post" action="{% url 'vote' %}">
-    <span class="badge">{{ question.answer_set.all.count }} Answer{{ question.answer_set.all.count|pluralize }}</span>
-    <span class="badge">{{ question.vote_set.all.count }} Vote{{ question.vote_set.all.count|pluralize }}</span> 
+    <span class="badge">{{ blog.answer_set.all.count }} Answer{{ blog.answer_set.all.count|pluralize }}</span>
+    <span class="badge">{{ blog.vote_set.all.count }} Vote{{ blog.vote_set.all.count|pluralize }}</span>
     {% csrf_token %}
     <input type="hidden" name="question" value="{{ question.id }}" />
     <input type="hidden" name="user" value="{{ user.id }}" />
-        {% if question in user_votes %}  
+        {% if question in user_votes %}
         <button class="btn btn-link">
           <span class="glyphicon glyphicon-thumbs-down"></span>
         </button>
